update dark mode & fix

--- a/src/input.css
+++ b/src/input.css
@@ -7,14 +7,13 @@ body {
 }
 
 .navbar-fixed {
-  @apply fixed z-[999] bg-white bg-opacity-80;
-  backdrop-filter: blur(5px);
+  @apply fixed z-[999] bg-white/80 backdrop-blur-sm dark:bg-dark/80;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 @layer components {
   .burger-line {
-    @apply w-[30px] h-[2px] my-2 block bg-dark transition duration-300;
+    @apply my-2 block h-[2px] w-[30px] bg-dark transition duration-300 dark:bg-white;
   }
 }
 
@@ -28,4 +27,8 @@ body {
 
 .burger-active > span:last-child {
   @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-4;
 }
